# modelcheck

./: CMakeLists.txt  README.md
examples/simple/: CMakeLists.txt  simple.c
include/modelcheck/: allocator.h  model_assert.h
src/: allocator.c
